--- a/internal/site/src/locales/en/en.po
+++ b/internal/site/src/locales/en/en.po
@@ -649,6 +649,10 @@ msgstr "Enter email address..."
 msgid "Enter your one-time password."
 msgstr "Enter your one-time password."
 
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Ephemeral"
+msgstr "Ephemeral"
+
 #: src/components/login/auth-form.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/routes/settings/config-yaml.tsx
@@ -678,6 +682,10 @@ msgstr "Existing systems not defined in <0>config.yml</0> will be deleted. Pleas
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Exited active"
 msgstr "Exited active"
+
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Expires after one hour or on hub restart."
+msgstr "Expires after one hour or on hub restart."
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Export"
@@ -1104,6 +1112,14 @@ msgstr "Per-core average utilization"
 msgid "Percentage of time spent in each state"
 msgstr "Percentage of time spent in each state"
 
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Permanent"
+msgstr "Permanent"
+
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Persistence"
+msgstr "Persistence"
+
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
 msgstr "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
@@ -1259,6 +1275,10 @@ msgstr "Save Settings"
 #: src/components/add-system.tsx
 msgid "Save system"
 msgstr "Save system"
+
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Saved in the database and does not expire until you disable it."
+msgstr "Saved in the database and does not expire until you disable it."
 
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Schedule"
@@ -1684,8 +1704,8 @@ msgid "Webhook / Push notifications"
 msgstr "Webhook / Push notifications"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
-msgid "When enabled, this token allows agents to self-register without prior system creation. Expires after one hour or on hub restart."
-msgstr "When enabled, this token allows agents to self-register without prior system creation. Expires after one hour or on hub restart."
+msgid "When enabled, this token allows agents to self-register without prior system creation."
+msgstr "When enabled, this token allows agents to self-register without prior system creation."
 
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
