--- a/internal/site/src/locales/uk/uk.po
+++ b/internal/site/src/locales/uk/uk.po
@@ -654,6 +654,10 @@ msgstr "Введіть адресу електронної пошти..."
 msgid "Enter your one-time password."
 msgstr "Введіть ваш одноразовий пароль."
 
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Ephemeral"
+msgstr "Ефемерний"
+
 #: src/components/login/auth-form.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/routes/settings/config-yaml.tsx
@@ -683,6 +687,10 @@ msgstr "Існуючі системи, не визначені в <0>config.yml<
 #: src/components/systemd-table/systemd-table.tsx
 msgid "Exited active"
 msgstr "Завершилося активно"
+
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Expires after one hour or on hub restart."
+msgstr "Закінчується через годину або при перезапуску хаба."
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Export"
@@ -1109,6 +1117,14 @@ msgstr "Середнє використання на ядро"
 msgid "Percentage of time spent in each state"
 msgstr "Відсоток часу, проведеного в кожному стані"
 
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Permanent"
+msgstr "Постійний"
+
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Persistence"
+msgstr "Стійкість"
+
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
 msgstr "Будь ласка, <0>налаштуйте SMTP сервер</0>, щоб забезпечити доставку сповіщень."
@@ -1264,6 +1280,10 @@ msgstr "Зберегти налаштування"
 #: src/components/add-system.tsx
 msgid "Save system"
 msgstr "Зберегти систему"
+
+#: src/components/routes/settings/tokens-fingerprints.tsx
+msgid "Saved in the database and does not expire until you disable it."
+msgstr "Збережено в базі даних і не закінчується, поки ви його не вимкнете."
 
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Schedule"
@@ -1689,8 +1709,8 @@ msgid "Webhook / Push notifications"
 msgstr "Webhook / Push сповіщення"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
-msgid "When enabled, this token allows agents to self-register without prior system creation. Expires after one hour or on hub restart."
-msgstr "Коли увімкнено, цей токен дозволяє агентам самостійно реєструватися без попереднього створення системи. Термін дії закінчується через годину або при перезапуску хабу."
+msgid "When enabled, this token allows agents to self-register without prior system creation."
+msgstr "При ввімкненні цей токен дозволяє агентам самостійно реєструватися без попереднього створення системи."
 
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
