--- a/internal/site/src/locales/da/da.po
+++ b/internal/site/src/locales/da/da.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: da\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-12-19 10:55\n"
+"PO-Revision-Date: 2026-01-31 21:16\n"
 "Last-Translator: \n"
 "Language-Team: Danish\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -157,6 +157,7 @@ msgstr "Alarmer"
 
 #: src/components/command-palette.tsx
 #: src/components/containers-table/containers-table.tsx
+#: src/components/navbar.tsx
 #: src/components/routes/containers.tsx
 msgid "All Containers"
 msgstr "Alle containere"
@@ -198,7 +199,7 @@ msgstr "Gennemsnit falder under <0>{value}{0}</0>"
 #. placeholder {0}: alertData.unit
 #: src/components/alerts/alerts-sheet.tsx
 msgid "Average exceeds <0>{value}{0}</0>"
-msgstr "Gennemsnit overstiger <0>{value}{0}</0>"
+msgstr "Gennemsnittet overstiger <0>{value}{0}</0>"
 
 #: src/components/routes/system.tsx
 msgid "Average power consumption of GPUs"
@@ -230,7 +231,7 @@ msgstr "Båndbredde"
 #. Battery label in systems table header
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Bat"
-msgstr "Bat"
+msgstr ""
 
 #: src/components/routes/system.tsx
 #: src/lib/alerts.ts
@@ -400,7 +401,7 @@ msgstr "Forbindelsen er nede"
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Continue"
-msgstr "Forsæt"
+msgstr "Fortsæt"
 
 #: src/lib/utils.ts
 msgid "Copied to clipboard"
@@ -425,7 +426,7 @@ msgstr "Kopier miljø"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Copy host"
-msgstr "Kopier host"
+msgstr "Kopier vært"
 
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
@@ -626,7 +627,7 @@ msgstr "Rediger {foo}"
 #: src/components/login/forgot-pass-form.tsx
 #: src/components/login/otp-forms.tsx
 msgid "Email"
-msgstr "E-mail"
+msgstr "Email"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Email notifications"
@@ -644,11 +645,11 @@ msgstr "Sluttid"
 
 #: src/components/login/login.tsx
 msgid "Enter email address to reset password"
-msgstr "Indtast e-mailadresse for at nulstille adgangskoden"
+msgstr "Indtast emailadresse for at nulstille adgangskoden"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Enter email address..."
-msgstr "Indtast e-mailadresse..."
+msgstr "Indtast emailadresse..."
 
 #: src/components/login/otp-forms.tsx
 msgid "Enter your one-time password."
@@ -791,7 +792,7 @@ msgstr "GPU-enheder"
 
 #: src/components/routes/system.tsx
 msgid "GPU Power Draw"
-msgstr "Gpu Strøm Træk"
+msgstr "GPU Strøm Træk"
 
 #: src/lib/alerts.ts
 msgid "GPU Usage"
@@ -837,6 +838,7 @@ msgstr "Inaktiv"
 msgid "Invalid email address."
 msgstr "Ugyldig email adresse."
 
+#: src/components/lang-toggle.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Language"
 msgstr "Sprog"
@@ -1119,7 +1121,7 @@ msgstr "Procentdel af tid brugt i hver tilstand"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Permanent"
-msgstr "Permanent"
+msgstr ""
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Persistence"
@@ -1335,6 +1337,7 @@ msgstr "Indstil procentvise tærskler for målerfarver."
 
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
+#: src/components/navbar.tsx
 #: src/components/routes/settings/layout.tsx
 #: src/components/routes/settings/layout.tsx
 msgid "Settings"
@@ -1486,6 +1489,7 @@ msgstr "Til email(s)"
 msgid "Toggle grid"
 msgstr "Slå gitter til/fra"
 
+#: src/components/mode-toggle.tsx
 #: src/components/mode-toggle.tsx
 msgid "Toggle theme"
 msgstr "Skift tema"
