--- a/internal/site/src/locales/hu/hu.po
+++ b/internal/site/src/locales/hu/hu.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: hu\n"
 "Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-12-02 23:18\n"
+"PO-Revision-Date: 2026-01-31 21:16\n"
 "Last-Translator: \n"
 "Language-Team: Hungarian\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -113,7 +113,7 @@ msgstr "Hozzáadás {foo}"
 
 #: src/components/add-system.tsx
 msgid "Add <0>System</0>"
-msgstr "Hozzáadás <0>System</0>"
+msgstr "<0>Rendszer</0> Hozzáadása"
 
 #: src/components/add-system.tsx
 msgid "Add system"
@@ -125,7 +125,7 @@ msgstr "URL hozzáadása"
 
 #: src/components/routes/settings/general.tsx
 msgid "Adjust display options for charts."
-msgstr "Állítsa be a diagram megjelenítését."
+msgstr "A diagramok megjelenítésének beállítása."
 
 #: src/components/routes/settings/general.tsx
 msgid "Adjust the width of the main layout"
@@ -157,9 +157,10 @@ msgstr "Riasztások"
 
 #: src/components/command-palette.tsx
 #: src/components/containers-table/containers-table.tsx
+#: src/components/navbar.tsx
 #: src/components/routes/containers.tsx
 msgid "All Containers"
-msgstr "Összes konténer"
+msgstr "Minden konténer"
 
 #: src/components/alerts/alerts-sheet.tsx
 #: src/components/command-palette.tsx
@@ -230,7 +231,7 @@ msgstr "Sávszélesség"
 #. Battery label in systems table header
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Bat"
-msgstr "Akk"
+msgstr "Akku"
 
 #: src/components/routes/system.tsx
 #: src/lib/alerts.ts
@@ -656,7 +657,7 @@ msgstr "Adja meg az egyszeri jelszavát."
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Ephemeral"
-msgstr "Átmeneti"
+msgstr "Ideiglenes"
 
 #: src/components/login/auth-form.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
@@ -758,7 +759,7 @@ msgstr "Firmware"
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
-msgstr "A <0>{min}</0> {min, plural, one {perc} other {percek}}"
+msgstr "<0>{min}</0> {min, plural, one {percig} other {percig}}"
 
 #: src/components/login/auth-form.tsx
 msgid "Forgot password?"
@@ -837,6 +838,7 @@ msgstr "Inaktív"
 msgid "Invalid email address."
 msgstr "Érvénytelen e-mail cím."
 
+#: src/components/lang-toggle.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Language"
 msgstr "Nyelv"
@@ -1123,7 +1125,7 @@ msgstr "Állandó"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Persistence"
-msgstr "Kitartás"
+msgstr "Tartósság"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
@@ -1311,7 +1313,7 @@ msgstr "Lásd <0>az értesítési beállításokat</0>, hogy konfigurálja, hogy
 
 #: src/components/routes/settings/quiet-hours.tsx
 msgid "Select {foo}"
-msgstr ""
+msgstr "{foo} kiválasztása"
 
 #: src/components/routes/system.tsx
 msgid "Sent"
@@ -1335,6 +1337,7 @@ msgstr "Százalékos küszöbértékek beállítása a mérőszínekhez."
 
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
+#: src/components/navbar.tsx
 #: src/components/routes/settings/layout.tsx
 #: src/components/routes/settings/layout.tsx
 msgid "Settings"
@@ -1487,6 +1490,7 @@ msgid "Toggle grid"
 msgstr "Rács ki- és bekapcsolása"
 
 #: src/components/mode-toggle.tsx
+#: src/components/mode-toggle.tsx
 msgid "Toggle theme"
 msgstr "Téma váltása"
 
@@ -1549,19 +1553,19 @@ msgstr "Riaszt, ha az 5 perces terhelési átlag túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when any sensor exceeds a threshold"
-msgstr "Bekapcsol, ha bármelyik érzékelő túllép egy küszöbértéket"
+msgstr "Riaszt, ha bármelyik hőmérséklet érzékelő túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when battery charge drops below a threshold"
-msgstr ""
+msgstr "Riaszt, ha az akkumulátor töltöttségi szintje egy küszöbérték alá esik"
 
 #: src/lib/alerts.ts
 msgid "Triggers when combined up/down exceeds a threshold"
-msgstr "Bekapcsol, ha bármelyik érzékelő túllép egy küszöbértéket"
+msgstr "Riaszt, ha a sávszélesség-használat túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when CPU usage exceeds a threshold"
-msgstr "Bekapcsol, ha a CPU érzékelő túllép egy küszöbértéket"
+msgstr "Riaszt, ha a CPU használat túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when GPU usage exceeds a threshold"
@@ -1569,15 +1573,15 @@ msgstr "Riaszt, ha a GPU használat túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when memory usage exceeds a threshold"
-msgstr "Bekapcsol, ha a Ram érzékelő túllép egy küszöbértéket"
+msgstr "Riaszt, ha a memóriahasználat túllép egy küszöbértéket"
 
 #: src/lib/alerts.ts
 msgid "Triggers when status switches between up and down"
-msgstr "Bekapcsol, amikor az állapot fel és le között változik"
+msgstr "Riaszt, amikor a rendszer online állapota változik"
 
 #: src/lib/alerts.ts
 msgid "Triggers when usage of any disk exceeds a threshold"
-msgstr "Bekapcsol, ha a lemez érzékelő túllép egy küszöbértéket"
+msgstr "Riaszt, ha a lemezhasználat túllép egy küszöbértéket"
 
 #: src/components/routes/settings/quiet-hours.tsx
 #: src/components/routes/settings/quiet-hours.tsx
@@ -1710,7 +1714,7 @@ msgstr "Webhook / Push értesítések"
 
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "When enabled, this token allows agents to self-register without prior system creation."
-msgstr "Ha engedélyezve van, ez a token lehetővé teszi az ügynökök számára az önregisztrációt rendszer előzetes létrehozása nélkül."
+msgstr "Ha engedélyezve van, ez a token lehetővé teszi az ügynökök számára a regisztrációt a rendszer előzetes létrehozása nélkül."
 
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
